--- a/index.html
+++ b/index.html
@@ -11,11 +11,88 @@ Comment Out Code Command + /
     <title>Unit 4 - Flexbox</title>
     <style>
  
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #7ecbff;
+  color: rgb(0, 0, 0);
+  transform: rotateY(180deg);
+}
+
+.main{
+  background-color: darkcyan;
+  display:flex;
+}
+
     </style>
   </head>
   <body>
     <h1>Jungle Animals</h1>
 
+    <div class="main">
+
+    <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://media.cnn.com/api/v1/images/stellar/prod/160107100400-monkey-selfie.jpg?q=w_2912,h_1638,x_0,y_0,c_fill" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>MONKEY</h1> 
+      <p>Cool lookin fella</p> 
+      <p>We love this charming young lad</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://images.photowall.com/products/60733/tiger-4.jpg?h=699&q=85" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>TIGER</h1> 
+      <p>Another cool lookin fella</p> 
+      <p>We love this guy</p>
+    </div>
+  </div>
+</div>
    
   </body>
 </html>
